--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div class="form-container sign-up-form" style="display: none;">
                 <p class="title">Create an Account</p>
-                <form class="form">
+                <form class="form" action="dashboard.html" >
                     <input type="text" class="input" placeholder="Full Name">
                     <input type="email" class="input" placeholder="Email">
                     <input type="password" class="input" placeholder="Password">
