--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="form-container login-form">
                 <p class="title">Welcome back!!! </p>
-                <form class="form">
+                <form class="form" action="dashboard.html" >
                     <input type="email" class="input" placeholder="Email">
                     <input type="password" class="input" placeholder="Password">
                     <p class="page-link">
